<resources>
    <string name="app_name">Weather App project</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_alert">Alert</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Alex">Alex</string>
    <string name="Date">Date</string>
    <string name="status">status</string>
    <string name="temp">temp</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Clear">Clear</string>
    <string name="Egypt">Egypt</string>
    <string name="Description">Description</string>
    <string name="Language">" Language"</string>
    <string name="Arabic">Arabic</string>
    <string name="English">" English"</string>
    <string name="Location">Location</string>
    <string name="GPS">" GPS "</string>
    <string name="MAP">MAP</string>
    <string name="Temperature">Temperature</string>
    <string name="Kelvin">Kelvin</string>
    <string name="Celsius">Celsius</string>
    <string name="Fahrenheit">Fahrenheit</string>
    <string name="WindSpeed">"Wind speed "</string>
    <string name="meter_sec">meter_sec</string>
    <string name="miles_hour">miles_hour</string>
    <string name="country">country</string>
    <string name="start">start</string>
    <string name="end">end</string>
    <string name="From">From</string>
    <string name="TO">TO</string>
    <string name="StartDate">Start Date</string>
    <string name="EndDate">End Date</string>
    <string name="Country">Country</string>
    <string name="Alarm">Alarm</string>
    <string name="notification">notification</string>
    <string name="Cancel">Cancel</string>
    <string name="Save">Save</string>
    <string name="CancelAlarm">Cancel</string>
    <string name="notification_channel">NotificationChannel</string>
    <string name="FromTime">FromTime</string>
    <string name="ToTime">ToTime</string>
    <string name="WeatherAPP">Weather APP</string>
</resources>