<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:iconTint="#3A9BDC"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/baseline_favorite_24"
            android:iconTint="#3A9BDC"
            android:title="@string/menu_favorite" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings_applications_24"
            android:iconTint="#3A9BDC"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/alertFragment"
            android:icon="@drawable/baseline_alarm_24"
            android:iconTint="#3A9BDC"
            android:title="@string/menu_alert" />

    </group>
</menu>