<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/dialogeFragment">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.weatherappproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <argument
            android:name="map"
            app:argType="boolean"
            android:defaultValue="false" />
        <argument
            android:name="lat"
            app:argType="string" />
        <argument
            android:name="lon"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.example.weatherappproject.ui.favorite.FavoriteFragment"
        android:label="@string/menu_favorite"
        tools:layout="@layout/fragment_favorite" >
        <argument
            android:name="fav"
            app:argType="boolean"
            android:defaultValue="false" />
        <argument
            android:name="latFav"
            app:argType="string"
            android:defaultValue="0" />
        <argument
            android:name="lonFav"
            app:argType="string"
            android:defaultValue="0" />
        <action
            android:id="@+id/action_nav_favorite_to_mapsFragment"
            app:destination="@id/mapsFragment" />
        <action
            android:id="@+id/action_nav_favorite_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.weatherappproject.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/alertFragment"
        android:name="com.example.weatherappproject.AlertFragment"
        android:label="fragment_alert"
        tools:layout="@layout/fragment_alert" />
    <fragment
        android:id="@+id/dialogeFragment"
        android:name="com.example.weatherappproject.DialogeFragment"
        android:label="fragment_dialoge"
        tools:layout="@layout/fragment_dialoge" >
        <action
            android:id="@+id/action_dialogeFragment_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_dialogeFragment_to_mapsFragment"
            app:destination="@id/mapsFragment" />
    </fragment>
    <fragment
        android:id="@+id/mapsFragment"
        android:name="com.example.weatherappproject.MapsFragment"
        android:label="fragment_maps"
        tools:layout="@layout/fragment_maps" >
        <action
            android:id="@+id/action_mapsFragment_to_nav_home"
            app:destination="@id/nav_home" />
        <argument
            android:name="fromFav"
            app:argType="integer"
            android:defaultValue="1" />
        <action
            android:id="@+id/action_mapsFragment_to_nav_favorite"
            app:destination="@id/nav_favorite" />
    </fragment>
    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.example.weatherappproject.ui.details.DetailsFragment"
        android:label="fragment_details"
        tools:layout="@layout/fragment_details" >
        <argument
            android:name="detailsLat"
            app:argType="string"
            android:defaultValue="0" />
        <argument
            android:name="detailsLon"
            app:argType="string"
            android:defaultValue="0" />
    </fragment>
</navigation>